fix landing overflow

--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    @apply w-screen overflow-x-hidden
+    @apply overflow-x-hidden overflow-y-scroll
 }
